backend-springboot/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-springboot
  namespace: sk-team-06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-springboot
  template:
    metadata:
      labels:
        app: backend-springboot
    spec:
      containers:
        - name: backend-springboot
          image: seyoon93/backend-springboot:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: temp-storage # upload-volume
              mountPath: /data/upload
      volumes:
        - name: temp-storage # upload-volume
          emptyDir: {}  # 임시 저장소로 사용, Pod가 삭제되면 데이터도 삭제됨
          # persistentVolumeClaim:
          #   claimName: upload-pvc
