backend-springboot/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: sk-team-06
spec:
  type: ClusterIP
  selector:
    app: backend-springboot
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
